# KyaHuaPathe

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  uvicorn.sh
.agent/rules/: external-libraries.md
.cursor/rules/: get-docs.mdc
src/: agent.py  llm_models.py  mongo.py  tools.py
src/prompts/: atom.md.j2  el_facto.md.j2  prompt_manager.py
src/telegram/: bot.py  filter.py
tests/: conftest.py  test_agent.py
tests/telegram/: __init__.py  test_bot.py  test_filter.py
