[project]
name = "kyahuapathe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk>=1.20.0",
    "google-genai>=1.53.0",
    "litellm>=1.80.7",
    "logfire[google-genai]>=4.15.1",
    "openai>=2.9.0",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.5",
    "telegramify-markdown[mermaid]>=0.5.2",
]
